# AcrylicWindow

./: CMakeLists.txt  README.md
AcrylicMaterial/: CMakeLists.txt  acrylicattribute.h  acrylicmaterial.cpp  acrylicmaterial.h  dllmain.cpp
BlurEffect/: CMakeLists.txt  blurwidget.cpp  blurwidget.h  main.cpp  resource.qrc  widget.cpp  widget.h
Demo/: CMakeLists.txt  exwidget.cpp  exwidget.h  main.cpp
